src/snapshots/lis_lang__parser__tests__stmt_return.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 9,
            line: 0,
            col: 9,
        },
        node: Return {
            keyword: Token {
                sigil: Keyword(
                    Return,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
            },
            expr: Some(
                Span {
                    range: Pos {
                        offset: 7,
                        line: 0,
                        col: 7,
                    }..Pos {
                        offset: 9,
                        line: 0,
                        col: 9,
                    },
                    node: Num {
                        val: 42.0,
                    },
                },
            ),
        },
    },
)
