src/snapshots/lis_lang__parser__tests__stmt_return_no_value.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 6,
            line: 0,
            col: 6,
        },
        node: Return {
            keyword: Token {
                sigil: Keyword(
                    Return,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
            },
            expr: None,
        },
    },
)
